fix css:bottom gap too big

--- a/todo-web/styles/Home.module.css
+++ b/todo-web/styles/Home.module.css
@@ -1,32 +1,32 @@
 .container {
-  width: 100vw;
-  height: 100vh;
+    width: 100vw;
+    height: 100vh;
 }
 
 .main {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .contentArea {
-  width: 100%;
-  max-width: 750px;
-  padding: 5px 10px;
-  margin: 0 auto;
+    width: 100%;
+    max-width: 750px;
+    padding: 5px 10px 10px 10px;
+    margin: 0 auto;
 }
 
 .operationArea {
-  width: 100%;
-  max-width: 750px;
-  height: 50px;
-  padding: 5px 10px;
-  margin: 0 auto;
+    width: 100%;
+    max-width: 750px;
+    height: 50px;
+    padding: 5px 10px;
+    margin: 0 auto;
 }
 
 .taskButton {
-  width: 90%;
-  height: 40px;
-  font-size: 20px;
-  display: block;
-  margin: 5px auto;
+    width: 90%;
+    height: 40px;
+    font-size: 20px;
+    display: block;
+    margin: 5px auto;
 }
